--- a/seasideshacks-hostfully-css.css
+++ b/seasideshacks-hostfully-css.css
@@ -2,18 +2,14 @@
     display: none;
 }
 
-.blueimp-gallery-carousel {
-    margin-top: 100px;
-}
-
 .navbar {
     background: #000;
     transition: all 0.4s;
+    display: block !important;
 }
 
 .navbar .nav-link {
     color: #fff;
-
 }
 
 .navbar .nav-link:hover,
