--- a/seasideshacks-hostfully-css.css
+++ b/seasideshacks-hostfully-css.css
@@ -48,6 +48,7 @@
 @media (max-width: 991px) {
     .navbar {
         background: #000;
+	display: block !important;
     }
 
     .navbar .navbar-brand, .navbar .nav-link {
