--- a/seasideshacks-hostfully-css.css
+++ b/seasideshacks-hostfully-css.css
@@ -2,10 +2,14 @@
     display: none;
 }
 
+.hide-on-mobile,
+.hide-on-desktop {
+    margin-top: 100px;
+}
+
 .navbar {
     background: #000;
     transition: all 0.4s;
-    display: block !important;
 }
 
 .navbar .nav-link {
@@ -48,7 +52,6 @@
 @media (max-width: 991px) {
     .navbar {
         background: #000;
-	display: block !important;
     }
 
     .navbar .navbar-brand, .navbar .nav-link {
